--- a/AdquisicionesWEB/package.json
+++ b/AdquisicionesWEB/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser-dynamic": "^19.0.6"
   },
   "devDependencies": {
-    "@angular/build": "^19.0.7",
+    "@angular/build": "^f.7",
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.6",
     "typescript": "^5.6.3"
