--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 services:
   sqlserver:
     image: mcr.microsoft.com/azure-sql-edge:latest
@@ -11,9 +10,9 @@ services:
     ports:
       - "1433:1433"
     networks:
-      - adquisiciones_net
+      - cootranstame_net
     
-  adquisicionesapi:
+  cootranstameapi:
     build:
       context: ./AdquisicionesAPI
       dockerfile: Dockerfile
@@ -24,19 +23,19 @@ services:
     depends_on:
       - sqlserver
     networks:
-      - adquisiciones_net
+      - cootranstame_net
     
-  adquisicionesweb:
+  cootranstameweb:
     build:
       context: ./AdquisicionesWEB
       dockerfile: Dockerfile
     ports:
       - "4200:80"
     depends_on:
-      - adquisicionesapi
+      - cootranstameapi
     networks:
-      - adquisiciones_net
+      - cootranstame_net
 
 networks:
-  adquisiciones_net:
+  cootranstame_net:
     driver: bridge
